// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ApproveDetails /> renders component for approve details 1`] = `
<div>
  <div
    class="mb-4 pt-1 pr-2 pb-1 pl-2 bg-section rounded-lg"
    data-testid="confirmation__approve-details"
  >
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      data-testid="confirmation__approve-spender"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Spender
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-1"
              class=""
              data-original-title="This is the address that will be able to withdraw your NFTs."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-alternative"
                data-testid="confirmation__approve-spender-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-row items-center flex"
      >
        <div
          class="mm-box overflow-hidden mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="name name__clickable name__missing"
          >
            <span
              class="mm-box name__icon mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/question.svg');"
            />
            <p
              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
            >
              0x2e0D7...5d09B
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding-top: 8px; padding-bottom: 8px;"
    >
      <div
        style="height: 1px; margin-left: -8px; margin-right: -8px;"
      />
    </div>
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Network
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
          style="border-width: 0px;"
        >
          G
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          data-testid="confirmation__details-network-name"
        >
          Goerli
        </p>
      </div>
    </div>
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      data-testid="transaction-details-origin-row"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-2"
              class=""
              data-original-title="This is the site asking for your confirmation."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-alternative"
                data-testid="transaction-details-origin-row-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-wrap gap-2 items-center flex"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      data-testid="transaction-details-recipient-row"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Interacting with
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-3"
              class=""
              data-original-title="This is the contract you're interacting with. Protect yourself from scammers by verifying the details."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-alternative"
                data-testid="transaction-details-recipient-row-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-row items-center flex"
      >
        <div
          class="mm-box overflow-hidden mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="name name__clickable name__missing"
          >
            <span
              class="mm-box name__icon mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/question.svg');"
            />
            <p
              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
            >
              0x07614...3ad68
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ApproveDetails /> renders component for approve details for setApprovalForAll 1`] = `
<div>
  <div
    class="mb-4 pt-1 pr-2 pb-1 pl-2 bg-section rounded-lg"
    data-testid="confirmation__approve-details"
  >
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      data-testid="confirmation__approve-spender"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Permission for
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-4"
              class=""
              data-original-title="This is the address that will be able to withdraw your NFTs."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-alternative"
                data-testid="confirmation__approve-spender-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-row items-center flex"
      >
        <div
          class="mm-box overflow-hidden mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="name name__clickable name__missing"
          >
            <span
              class="mm-box name__icon mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/question.svg');"
            />
            <p
              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
            >
              0x2e0D7...5d09B
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding-top: 8px; padding-bottom: 8px;"
    >
      <div
        style="height: 1px; margin-left: -8px; margin-right: -8px;"
      />
    </div>
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Network
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <div
          class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-network mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-md mm-box--border-color-background-default mm-box--border-width-1 box--border-style-solid"
          style="border-width: 0px;"
        >
          G
        </div>
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
          data-testid="confirmation__details-network-name"
        >
          Goerli
        </p>
      </div>
    </div>
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      data-testid="transaction-details-origin-row"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-5"
              class=""
              data-original-title="This is the site asking for your confirmation."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-alternative"
                data-testid="transaction-details-origin-row-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-wrap gap-2 items-center flex"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
    <div
      class="flex-row flex-wrap items-start justify-between mt-2 mb-2 pr-2 pl-2 flex confirm-info-row rounded-lg text-default"
      data-testid="transaction-details-recipient-row"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="flex-row items-start justify-start flex text-alternative"
        style="flex-shrink: 0; flex-basis: auto; max-width: 100%;"
      >
        <div
          class="items-center flex"
          style="flex-shrink: 0;"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Interacting with
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-6"
              class=""
              data-original-title="This is the contract you're interacting with. Protect yourself from scammers by verifying the details."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-alternative"
                data-testid="transaction-details-recipient-row-tooltip"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex-row items-center flex"
      >
        <div
          class="mm-box overflow-hidden mm-box--display-flex mm-box--flex-direction-column"
        >
          <div
            class="name name__clickable name__missing"
          >
            <span
              class="mm-box name__icon mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
              style="mask-image: url('./images/icons/question.svg');"
            />
            <p
              class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
            >
              0x07614...3ad68
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
